src/styles/global.css
@import 'tailwindcss';

@theme {
  --color-primario: #d59fac;

  --color-titulo: var(--color-gray-800);
  --color-cuerpo: var(--color-gray-700);
  --color-atenuado: var(--color-gray-600);
  --color-sutil: var(--color-gray-500);
}

html {
  font-family:
    'Segoe UI Variable Text',
    'Segoe UI Variable Display',
    'Segoe UI',
    -apple-system,
    BlinkMacSystemFont,
    'SF Pro Text',
    system-ui,
    Roboto,
    'Helvetica Neue',
    Arial,
    'Noto Sans',
    'Apple Color Emoji',
    'Segoe UI Emoji',
    'Segoe UI Symbol',
    sans-serif;

  scroll-behavior: smooth;
}

@media (prefers-reduced-motion: reduce) {
  html {
    scroll-behavior: auto;
  }
}

@utility bg-main-gradient {
  background-image: radial-gradient(
    ellipse 80% 80% at 50% -20%,
    rgba(120, 119, 198, 0.3),
    rgba(255, 255, 255, 0)
  );
}

@utility text-tam-principal {
  @apply text-sm sm:text-base md:text-lg lg:text-xl xl:text-2xl;
}

@utility text-tam-grande {
  @apply text-2xl sm:text-3xl md:text-4xl lg:text-5xl xl:text-6xl;
}

@utility text-tam-mayor {
  @apply text-xl sm:text-2xl md:text-3xl lg:text-4xl xl:text-5xl;
}

@utility text-tam-mediano {
  @apply text-lg sm:text-xl md:text-2xl lg:text-3xl xl:text-4xl;
}

@utility text-tam-base {
  @apply text-base sm:text-lg md:text-xl lg:text-2xl xl:text-3xl;
}

@utility text-tam-reducido {
  @apply text-xs sm:text-sm md:text-base lg:text-lg xl:text-xl;
}

@utility text-tam-legal {
  @apply text-[11px] sm:text-xs md:text-sm lg:text-[15px] xl:text-base;
}

